data/contextbench_phase1/stripped/raw_transcripts/000065_367a86bb.txt
STRIPPED RAW CLAUDE CODE TRAJECTORY
This transcript was rendered from original raw JSONL using the canonical ADP strip manifest.

[RAW line 3 USER]
PRIOR ISSUE METADATA
repo: django/django
instance_id: django__django-12700
base_commit: d51c50d836c5cf8db5566da17963f871be554615
problem_statement:
Settings are cleaned insufficiently.
Description

Posting publicly after checking with the rest of the security team.
I just ran into a case where django.views.debug.SafeExceptionReporterFilter.get_safe_settings() would return several un-cleansed values. Looking at cleanse_setting() I realized that we ​only take care of `dict`s but don't take other types of iterables into account but ​return them as-is.
Example:
In my settings.py I have this:
MY_SETTING = {
    "foo": "value",
    "secret": "value",
    "token": "value",
    "something": [
        {"foo": "value"},
        {"secret": "value"},
        {"token": "value"},
    ],
    "else": [
        [
            {"foo": "value"},
            {"secret": "value"},
            {"token": "value"},
        ],
        [
            {"foo": "value"},
            {"secret": "value"},
            {"token": "value"},
        ],
    ]
}
On Django 3.0 and below:
>>> import pprint
>>> from django.views.debug import get_safe_settings
>>> pprint.pprint(get_safe_settings()["MY_SETTING"])
{'else': [[{'foo': 'value'}, {'secret': 'value'}, {'token': 'value'}],
         [{'foo': 'value'}, {'secret': 'value'}, {'token': 'value'}]],
 'foo': 'value',
 'secret': '********************',
 'something': [{'foo': 'value'}, {'secret': 'value'}, {'token': 'value'}],
 'token': '********************'}
On Django 3.1 and up:
>>> from django.views.debug import SafeExceptionReporterFilter
>>> import pprint
>>> pprint.pprint(SafeExceptionReporterFilter().get_safe_settings()["MY_SETTING"])
{'else': [[{'foo': 'value'}, {'secret': 'value'}, {'token': 'value'}],
         [{'foo': 'value'}, {'secret': 'value'}, {'token': 'value'}]],
 'foo': 'value',
 'secret': '********************',
 'something': [{'foo': 'value'}, {'secret': 'value'}, {'token': 'value'}],
 'token': '********************'}
[RAW line 7 TOOL Bash]
find . -name "*.py" -path "*/django/views/debug.py" | head -5
[RAW line 11 TOOL Glob]
{
  "pattern": "**/django/views/debug.py"
}
[RAW line 39 TOOL Bash]
cd testbed && python test_issue.py
[RAW line 40 TOOL RESULT toolu_011psEU6J8Drzft1FVVmSzQH]
Exit code 1
  File "test_issue.py", line 62
    current_path = f"{path}.{key}" if path else key
                                 ^
SyntaxError: invalid syntax
[RAW line 42 TOOL Bash]
cd testbed && python --version
[RAW line 43 TOOL RESULT toolu_01GaQapHKbVn1DYEJAoszkNV]
Python 2.7.3
[RAW line 45 TOOL Bash]
cd testbed && python3 test_issue.py
[RAW line 48 TOOL Bash]
python3 test_issue.py
[RAW line 49 TOOL RESULT toolu_01PC3N3oN7usprfEeGsW7Uj5]
Exit code 1
Error processing line 1 of /opt/anaconda3/lib/python3.8/site-packages/matplotlib-nspkg.pth:

  Traceback (most recent call last):
    File "/opt/anaconda3/lib/python3.8/site.py", line 169, in addpackage
      exec(line)
    File "<string>", line 1, in <module>
    File "<frozen importlib._bootstrap>", line 553, in module_from_spec
  AttributeError: 'NoneType' object has no attribute 'loader'

Remainder of file ignored

Testing SafeExceptionReporterFilter.get_safe_settings()...

Current output:
{'else': [[{'foo': 'value'}, {'secret': 'value'}, {'token': 'value'}],
          [{'foo': 'value'}, {'secret': 'value'}, {'token': 'value'}]],
 'foo': 'value',
 'secret': '********************',
 'something': [{'foo': 'value'}, {'secret': 'value'}, {'token': 'value'}],
 'token': '********************'}

ISSUES FOUND:
  - Key 'something[1].secret' has value 'value' but should be cleansed
  - Key 'something[2].token' has value 'value' but should be cleansed
  - Key 'else[0][1].secret' has value 'value' but should be cleansed
  - Key 'else[0][2].token' has value 'value' but should be cleansed
  - Key 'else[1][1].secret' has value 'value' but should be cleansed
  - Key 'else[1][2].token' has value 'value' but should be cleansed

The bug is confirmed - nested secrets are not being cleansed!
[RAW line 63 TOOL Bash]
python3 test_issue.py
[RAW line 65 TOOL RESULT toolu_01GNP42wuypueUN7DjvCzzjJ]
Testing SafeExceptionReporterFilter.get_safe_settings()...

Current output:
{'else': [[{'foo': 'value'},
           {'secret': '********************'},
           {'token': '********************'}],
          [{'foo': 'value'},
           {'secret': '********************'},
           {'token': '********************'}]],
 'foo': 'value',
 'secret': '********************',
 'something': [{'foo': 'value'},
               {'secret': '********************'},
               {'token': '********************'}],
 'token': '********************'}

SUCCESS: All secrets are properly cleansed!
Error processing line 1 of /opt/anaconda3/lib/python3.8/site-packages/matplotlib-nspkg.pth:

  Traceback (most recent call last):
    File "/opt/anaconda3/lib/python3.8/site.py", line 169, in addpackage
      exec(line)
    File "<string>", line 1, in <module>
    File "<frozen importlib._bootstrap>", line 553, in module_from_spec
  AttributeError: 'NoneType' object has no attribute 'loader'

Remainder of file ignored
[RAW line 68 TOOL Bash]
find testbed -path "*/tests/*" -name "*debug*" -o -path "*/tests/*" -name "*exception*" | grep -E "\.py$" | head -10
[RAW line 71 TOOL Glob]
{
  "pattern": "testbed/tests/**/*debug*.py"
}
[RAW line 72 TOOL RESULT toolu_01TGmFG94CvPtzeeaEpMfAKR]
./swebench_9_15/testbed/tests/test_runner/test_debug_sql.py
./swebench_9_15/testbed/tests/view_tests/templatetags/debugtags.py
./swebench_9_15/testbed/tests/view_tests/tests/test_debug.py
[RAW line 78 TOOL Bash]
cd testbed && python3 -m pytest tests/view_tests/tests/test_debug.py::ExceptionReporterFilterTests::test_cleanse_setting_basic -xvs
[RAW line 81 TOOL Bash]
python3 -m pytest tests/view_tests/tests/test_debug.py::ExceptionReporterFilterTests::test_cleanse_setting_basic -xvs
[RAW line 82 TOOL RESULT toolu_017qgBsmrLLNEYgR7qiVs4fm]
Exit code 1
Error processing line 1 of /opt/anaconda3/lib/python3.8/site-packages/matplotlib-nspkg.pth:

  Traceback (most recent call last):
    File "/opt/anaconda3/lib/python3.8/site.py", line 169, in addpackage
      exec(line)
    File "<string>", line 1, in <module>
    File "<frozen importlib._bootstrap>", line 553, in module_from_spec
  AttributeError: 'NoneType' object has no attribute 'loader'

Remainder of file ignored

============================= test session starts ==============================
platform darwin -- Python 3.8.8, pytest-8.3.5, pluggy-1.5.0 -- /opt/anaconda3/bin/python3
cachedir: .pytest_cache
hypothesis profile 'default' -> database=DirectoryBasedExampleDatabase(PosixPath('./swebench_9_15/testbed/.hypothesis/examples'))
rootdir: ./swebench_9_15/testbed
plugins: hypothesis-6.113.0, anyio-3.6.2, xdist-3.6.1
collecting ... collected 1 item

tests/view_tests/tests/test_debug.py::ExceptionReporterFilterTests::test_cleanse_setting_basic ERROR

==================================== ERRORS ====================================
__ ERROR at setup of ExceptionReporterFilterTests.test_cleanse_setting_basic ___

cls = <class 'view_tests.tests.test_debug.ExceptionReporterFilterTests'>

    @classmethod
    def setUpClass(cls):
        super().setUpClass()
        if cls._overridden_settings:
            cls._cls_overridden_context = override_settings(**cls._overridden_settings)
            cls._cls_overridden_context.enable()
        if cls._modified_settings:
            cls._cls_modified_context = modify_settings(cls._modified_settings)
            cls._cls_modified_context.enable()
>       cls._add_databases_failures()

django/test/testcases.py:181:
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
django/test/testcases.py:203: in _add_databases_failures
    for alias in connections:
django/db/utils.py:226: in __iter__
    return iter(self.databases)
django/utils/functional.py:48: in __get__
    res = instance.__dict__[
[... truncated ...]
[RAW line 84 TOOL Bash]
cd testbed && python3 tests/runtests.py view_tests.tests.test_debug.ExceptionReporterFilterTests.test_cleanse_setting_basic
[RAW line 90 TOOL Bash]
python3 tests/runtests.py view_tests.tests.test_debug.ExceptionReporterFilterTests.test_cleanse_setting_basic view_tests.tests.test_debug.ExceptionReporterFilterTests.test_cleanse_setting_recurses_in_dictionary --parallel 1
[RAW line 91 TOOL RESULT toolu_01RRGCENy78kzfc5PLEfWGFX]
Testing against Django installed in './swebench_9_15/testbed/django'
System check identified no issues (0 silenced).
Error processing line 1 of /opt/anaconda3/lib/python3.8/site-packages/matplotlib-nspkg.pth:

  Traceback (most recent call last):
    File "/opt/anaconda3/lib/python3.8/site.py", line 169, in addpackage
      exec(line)
    File "<string>", line 1, in <module>
    File "<frozen importlib._bootstrap>", line 553, in module_from_spec
  AttributeError: 'NoneType' object has no attribute 'loader'

Remainder of file ignored
..
----------------------------------------------------------------------
Ran 2 tests in 0.000s

OK
[RAW line 94 TOOL Bash]
cd ./swebench_9_15 && python3 test_issue.py
[RAW line 96 TOOL RESULT toolu_017ReBR9Fe9ssKpo643efYmc]
Exit code 2
python3: can't open file 'test_issue.py': [Errno 2] No such file or directory
Error processing line 1 of /opt/anaconda3/lib/python3.8/site-packages/matplotlib-nspkg.pth:

  Traceback (most recent call last):
    File "/opt/anaconda3/lib/python3.8/site.py", line 169, in addpackage
      exec(line)
    File "<string>", line 1, in <module>
    File "<frozen importlib._bootstrap>", line 553, in module_from_spec
  AttributeError: 'NoneType' object has no attribute 'loader'

Remainder of file ignored
[RAW line 98 TOOL Bash]
python3 test_issue.py 2>&1 | grep -A 20 "Current output:"
